# AttackPathGraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  pentest_graph.py  pyproject.toml  requirements-pdf.txt  requirements.txt  security_report.json  security_report_updated.json
.github/workflows/: ci.yml
core/: graph_engine.py  integrator.py  parsers.py
core/analysis/: mitre_attack.py  path_analyzer.py
core/parsers/: __init__.py  metasploit_parser.py  openvas_parser.py  parsers.py
core/reporting/: report_generator.py
core/scoring/: risk_scorer.py
core/security/: security_review.py
core/web/: web_interface.py
demo/: bloodhound_sample.json  metasploit_sample.json  nmap_sample.xml  openvas_sample.xml
tests/: __init__.py  test_cli.py  test_module_checks.py  test_modules.py  test_parsers.py  test_path_limits.py  test_web.py  test_xml_security.py
